Moved MysqldComponent and MysqldConfiguration from ball.tv to ball.spring.mysqld.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3239 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
   <dependencies verbose="true">
     <dependency>
       <groupId>ball</groupId>
+      <artifactId>ball-spring</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ball</groupId>
       <artifactId>ball-util</artifactId>
     </dependency>
     <dependency>
