Interim check-in: UI and RESTful API controller scaffolding.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3240 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.main.banner-mode: off
 spring.main.headless: false
 spring.main.log-startup-info: false
 
+spring.thymeleaf.cache: false
+
 logging.path: ${application.home}/log
 logging.file.max-size: 65536
 logging.file.max-history: 8
