--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 # $Id$
 
-application.home: ${user.home}/.config/forvm
+application.home: ${user.home}/.forvm
+
+spring.jpa.database-platform: org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto: update
+spring.jpa.hibernate.naming.implicit-strategy: default
+spring.jpa.hibernate.naming.physical-strategy:\
+  org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect.storage_engine: innodb
+spring.jpa.format-sql: true
+spring.jpa.show-sql: false
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.url:\
+  jdbc:mysql://localhost:${mysqld.port}/forvm?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username: root
 
 spring.main.banner-mode: off
 spring.main.headless: false
@@ -11,3 +24,11 @@ spring.thymeleaf.cache: false
 logging.path: ${application.home}/log
 logging.file.max-size: 65536
 logging.file.max-history: 8
+
+management.server.address: 127.0.0.1
+management.server.port: 8081
+management.endpoints.web.exposure.include: *
+management.endpoints.enabled-by-default: true
+
+mysqld.home: ${application.home}/mysql
+mysqld.port: 33061
