Interim check-in: Add initial schema.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3249 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
   <dependencies verbose="true">
     <dependency>
       <groupId>ball</groupId>
+      <artifactId>ball-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ball</groupId>
+      <artifactId>ball-persistence</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ball</groupId>
       <artifactId>ball-spring</artifactId>
     </dependency>
     <dependency>
