Standardized method parameter order.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3308 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # $Id$
 
+application.name: @pom.artifactId@
+application.brand: @pom.artifactId@
 application.home: ${user.home}/.forvm
 
 spring.jpa.database-platform: org.hibernate.dialect.MySQL57Dialect
@@ -12,7 +14,8 @@ spring.jpa.format-sql: true
 spring.jpa.show-sql: false
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.url:\
-  jdbc:mysql://localhost:${mysqld.port}/forvm?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+  jdbc:mysql://localhost:${mysqld.port}/forvm\
+  ?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username: root
 
 spring.main.banner-mode: off
