Fixed ~{${... template ...}} expressions.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3436 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ application.name: @pom.artifactId@
 application.brand: @pom.artifactId@
 
 spring.jpa.database-platform: org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto: update
+spring.jpa.hibernate.ddl-auto: validate
 spring.jpa.hibernate.naming.implicit-strategy: default
 spring.jpa.hibernate.naming.physical-strategy:\
   org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
