--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <name>forvm Blog Publishing Platform</name>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
     <version>2.0</version>
     <relativePath>../ball/parent/pom.xml</relativePath>
   </parent>
+  <profiles>
+    <profile>
+      <id>GOOGLE_APPLICATION_CREDENTIALS</id>
+      <activation>
+        <property>
+          <name>env.GOOGLE_APPLICATION_CREDENTIALS</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.google.cloud.sql</groupId>
+          <artifactId>mysql-socket-factory</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
   <properties>
     <jre.version>1.8</jre.version>
   </properties>
