--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,7 @@
     <profile>
       <id>GOOGLE_APPLICATION_CREDENTIALS</id>
       <activation>
-        <property>
-          <name>env.GOOGLE_APPLICATION_CREDENTIALS</name>
-        </property>
+        <property><name>env.GOOGLE_APPLICATION_CREDENTIALS</name></property>
       </activation>
       <dependencies>
         <dependency>
@@ -33,11 +31,6 @@
         <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
-          <scope>runtime</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.flywaydb</groupId>
-          <artifactId>flyway-core</artifactId>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
