Get stylesheets and javascript from application environment.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3544 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@
 application.name: @pom.artifactId@
 application.brand: @pom.artifactId@
 
+css: /css/prism.css, /css/style.css
+js: /js/prism.js
+
 spring.jpa.database-platform: org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto: validate
 spring.jpa.hibernate.naming.implicit-strategy: default
