--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,9 @@
       <groupId>org.thymeleaf.extras</groupId>
       <artifactId>thymeleaf-extras-springsecurity5</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.webjars.npm</groupId>
+      <artifactId>prismjs</artifactId>
+    </dependency>
   </dependencies>
 </project>
