Specify javadoc <doclet/>.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3926 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,8 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <configuration>
+                <doclet>com.sun.tools.doclets.formats.html.HtmlDoclet</doclet>
+                <docletPath>${tools.jar}</docletPath>
                 <taglet>ball.tools.javadoc.MavenBootstrapTaglet</taglet>
                 <tagletArtifacts>
                   <tagletArtifact>
