Interim check-in: BootstrapUI -> HTML5Template; started the process of removing Bootstrap-specific mark-up from templates.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3986 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,17 +30,10 @@ application.brand: @pom.artifactId@
 #                +autoloader+unescaped-markup+command-line
 #                +normalize-whitespace+keep-markup+show-invisibles
 #                +show-language+copy-to-clipboard
-css: /webjars/prismjs/themes/prism-tomorrow.css,\
-     /webjars/prismjs/plugins/toolbar/prism-toolbar.css,\
-     /webjars/prismjs/plugins/autolinker/prism-autolinker.css,\
-     /webjars/prismjs/plugins/command-line/prism-command-line.css,\
-     /webjars/prismjs/plugins/line-highlight/prism-line-highlight.css,\
-     /webjars/prismjs/plugins/line-numbers/prism-line-numbers.css,\
-     /webjars/prismjs/plugins/previewers/prism-previewers.css,\
-     /webjars/prismjs/plugins/unescaped-markup/prism-unescaped-markup.css,\
-     /webjars/prismjs/plugins/wpd/prism-wpd.css,\
-     /css/style.css
-js: /webjars/prismjs/prism.js,\
+css: /css/style.css
+js: /webjars/jquery/jquery.js,\
+    /webjars/bootstrap/js/bootstrap.js,\
+    /webjars/prismjs/prism.js,\
     /webjars/prismjs/components/prism-markup.js,\
     /webjars/prismjs/components/prism-css.js,\
     /webjars/prismjs/components/prism-clike.js,\
