--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <property><name>env.GOOGLE_APPLICATION_CREDENTIALS</name></property>
       </activation>
       <properties>
+        <mdep.skip>true</mdep.skip>
         <maven.source.skip>true</maven.source.skip>
         <maven.javadoc.skip>true</maven.javadoc.skip>
       </properties>
@@ -112,6 +113,18 @@
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
       <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>popper.js</artifactId>
     </dependency>
     <dependency>
       <groupId>org.webjars.npm</groupId>
