--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>forvm Blog Publishing Platform</name>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
