--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
       <dependencies>
         <dependency>
           <groupId>com.google.cloud.sql</groupId>
-          <artifactId>mysql-socket-factory</artifactId>
+          <artifactId>mysql-socket-factory-connector-j-8</artifactId>
           <scope>runtime</scope>
         </dependency>
         <dependency>
