--- a/jar/src/main/resources/application.properties
+++ b/jar/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.jpa.hibernate.ddl-auto: validate
 spring.jpa.hibernate.naming.implicit-strategy: default
 spring.jpa.hibernate.naming.physical-strategy:\
   org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.open-in-view: true
 spring.jpa.properties.hibernate.dialect.storage_engine: innodb
 spring.jpa.format-sql: true
 spring.jpa.show-sql: false
