--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>forvm Blog Publishing Platform</name>
   <groupId>ball</groupId>
   <artifactId>forvm-parent</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>pom</packaging>
   <parent>
     <groupId>ball</groupId>
