--- a/war/pom.xml
+++ b/war/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>forvm-parent</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <dependencies verbose="true">
