--- a/jar/pom.xml
+++ b/jar/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>forvm-parent</artifactId>
-    <version>1.2.0</version>
+    <version>1.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <profiles>
