Expand placeholders in *.model.properties.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4345 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm.model.properties
+++ b/jar/src/main/resources/templates/forvm.model.properties
@@ -1,5 +1,10 @@
 # $Id$
 
+brand = ${application.brand:}
+
+gaid = ${gaid:}
+gtid = ${gtid:}
+
 stylesheets:\
   /webjars/prismjs/themes/prism-tomorrow.css,\
   /webjars/prismjs/plugins/toolbar/prism-toolbar.css,\
@@ -11,11 +16,9 @@ stylesheets:\
   /webjars/prismjs/plugins/unescaped-markup/prism-unescaped-markup.css,\
   /webjars/prismjs/plugins/wpd/prism-wpd.css,\
   /webjars/bootstrap/css/bootstrap.css
-
 style:\
 body { padding-top: 60px; margin-bottom: 60px; }\n\
 @media (max-width: 979px) { body { padding-top: 0px; } }
-
 scripts:\
   /webjars/jquery/jquery.js, /webjars/bootstrap/js/bootstrap.js,\
   /webjars/prismjs/prism.js,\
