--- a/jar/pom.xml
+++ b/jar/pom.xml
@@ -5,15 +5,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>forvm Blog Publishing Platform JAR</name>
+  <name>forvm Blog Publishing Platform</name>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
+  <version>1.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
-    <artifactId>forvm-parent</artifactId>
-    <version>1.3-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <artifactId>parent</artifactId>
+    <version>5</version>
+    <relativePath>../../ball/parent/pom.xml</relativePath>
   </parent>
   <profiles>
     <profile>
@@ -55,6 +56,7 @@
   </profiles>
   <properties>
     <jre.version>1.8</jre.version>
+    <start-class>forvm.Launcher</start-class>
   </properties>
   <dependencies verbose="true">
     <dependency>
