Flattened source hierarchy.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4491 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
     <version>5</version>
-    <relativePath>../../ball/parent/pom.xml</relativePath>
+    <relativePath>../ball/parent/pom.xml</relativePath>
   </parent>
   <profiles>
     <profile>
