--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.format-sql: true
 spring.jpa.show-sql: false
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.username: forvm
+
+spring.servlet.multipart.max-file-size: 16MB
+spring.servlet.multipart.max-request-size: 16MB
+
+server.tomcat.max-swallow-size: -1
