--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,7 @@ spring.datasource.username: forvm
 spring.servlet.multipart.max-file-size: 16MB
 spring.servlet.multipart.max-request-size: 16MB
 
+server.jetty.max-http-form-post-size: 16MB
+
+server.tomcat.max-http-form-post-size: 16MB
 server.tomcat.max-swallow-size: -1
