--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,8 @@
       <id>spring-boot:run</id>
       <dependencies>
         <dependency>
-          <groupId>com.google.cloud.sql</groupId>
-          <artifactId>mysql-socket-factory</artifactId>
-          <scope>runtime</scope>
-        </dependency>
-        <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
