--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
   <description></description>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
-  <version>1.4.0</version>
+  <version>1.4-SNAPSHOT</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20200130.0</version>
+    <version>20200131-SNAPSHOT</version>
     <relativePath>../ball/parent/pom.xml</relativePath>
   </parent>
   <inceptionYear>2018</inceptionYear>
