--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,7 @@
 
   <resolver:resolve>
     <dependencies>
-      <dependency coords="ball:parent:20200208-SNAPSHOT:xml:compile"/>
+      <dependency coords="ball:parent:20200212.0:xml:compile"/>
     </dependencies>
     <properties/>
   </resolver:resolve>
