Started development of forvm 1.6.3.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@5994 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
   <description></description>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
-  <version>1.6.2</version>
+  <version>1.6.3</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20200513.0</version>
+    <version>20200514-SNAPSHOT</version>
     <relativePath>../ball/parent/pom.xml</relativePath>
   </parent>
   <inceptionYear>2018</inceptionYear>
