--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <description></description>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
-  <version>1.6.3</version>
+  <version>1.7-SNAPSHOT</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
