@AntLib and @AntTask:
* Removed support for property resource files (defaults.properties).

* Separated processor logic: @AntLib Processor generates antlib.xml files
  while @AntTask Processor verifies annotated classes.


git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6107 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,7 @@
           description="--> Invokes &lt;markdown-parse/&gt; task."
           depends="jar-classes">
     <taskdef classpathref="build.classpath"
-             resource="forvm/ant/defaults.properties"/>
+             resource="forvm/ant/antlib.xml"/>
     <markdown-parse classpathref="runtime.classpath"/>
   </target>
 
@@ -52,7 +52,7 @@
           description="--> Invokes &lt;markdown-render/&gt; task."
           depends="jar-classes">
     <taskdef classpathref="build.classpath"
-             resource="forvm/ant/defaults.properties"/>
+             resource="forvm/ant/antlib.xml"/>
     <markdown-render classpathref="runtime.classpath"/>
   </target>
 
