--- a/src/main/resources/templates/forvm.model.properties
+++ b/src/main/resources/templates/forvm.model.properties
@@ -20,7 +20,9 @@ style:\
 body { padding-top: 60px; margin-bottom: 60px; }\n\
 @media (max-width: 979px) { body { padding-top: 0px; } }
 scripts:\
-  /webjars/jquery/jquery.js, /webjars/bootstrap/js/bootstrap.js,\
+  /webjars/jquery/jquery.js,\
+  /webjars/popper.js/umd/popper.min.js,\
+  /webjars/bootstrap/js/bootstrap.js,\
   /webjars/prismjs/prism.js,\
   /webjars/prismjs/components/prism-markup.js,\
   /webjars/prismjs/components/prism-css.js,\
