Use ball-spring-mysqld-starter to start a mysqld instance (if configured).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6300 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <id>spring-boot:run</id>
       <dependencies>
         <dependency>
+          <groupId>ball</groupId>
+          <artifactId>ball-spring-mysqld-starter</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+        <dependency>
           <groupId>org.springframework.cloud</groupId>
           <artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
           <scope>runtime</scope>
