--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     </profile>
   </profiles>
   <properties>
-    <jre.version>1.8</jre.version>
+    <jse.release>1.8</jse.release>
     <start-class>forvm.Launcher</start-class>
   </properties>
   <dependencies verbose="true">
