Specify ${jse.target} and verify compilation with JDK9 and JDK11.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6399 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     </profile>
   </profiles>
   <properties>
-    <jse.release>8</jse.release>
+    <jse.target>8</jse.target>
     <start-class>forvm.Launcher</start-class>
   </properties>
   <dependencies verbose="true">
