Started development of forvm 1.8.1-SNAPSHOT.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6743 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <description></description>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
-  <version>1.8.0</version>
+  <version>1.8.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
