Use ".../{slug}/{path:.+}" (regular expression) to get attachment path.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@6852 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.model.properties
+++ b/src/main/resources/templates/forvm.model.properties
@@ -13,8 +13,7 @@ style:\
 body { padding-top: 60px; margin-bottom: 60px; }\n\
 @media (max-width: 979px) { body { padding-top: 0px; } }
 scripts:\
-  **/jquery/**/jquery.js,\
+  **/jquery/**/jquery.min.js,\
   **/popper.js/**/umd/popper.min.js,\
-  **/bootstrap/**/js/bootstrap.js,\
-  **/prismjs/**/prism.js,\
-  **/prismjs/**/plugins/*/prism-*.js
+  **/bootstrap/**/js/bootstrap.min.js,\
+  **/prismjs/**/prism.js, **/prismjs/**/plugins/*/prism-*.js
