--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 application.name: @pom.artifactId@
 application.brand: @pom.artifactId@
 
+server.port: ${PORT:8080}
+
 spring.jpa.hibernate.ddl-auto: validate
 spring.jpa.hibernate.naming.implicit-strategy: default
 spring.jpa.hibernate.naming.physical-strategy:\
