Do not include PrismJS's prism-show-invisibles.css.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@7096 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.model.properties
+++ b/src/main/resources/templates/forvm.model.properties
@@ -7,7 +7,18 @@ gtid: ${gtid:}
 
 stylesheets:\
   **/prismjs/**/themes/prism-tomorrow.css,\
-  **/prismjs/**/plugins/*/prism-*.css,\
+  **/prismjs/**/plugins/previewers/prism-previewers.css,\
+  **/prismjs/**/plugins/unescaped-markup/prism-unescaped-markup.css,\
+  **/prismjs/**/plugins/autolinker/prism-autolinker.css,\
+  **/prismjs/**/plugins/line-numbers/prism-line-numbers.css,\
+  **/prismjs/**/plugins/command-line/prism-command-line.css,\
+  **/prismjs/**/plugins/diff-highlight/prism-diff-highlight.css,\
+  **/prismjs/**/plugins/match-braces/prism-match-braces.css,\
+  **/prismjs/**/plugins/treeview/prism-treeview.css,\
+  **/prismjs/**/plugins/toolbar/prism-toolbar.css,\
+  **/prismjs/**/plugins/inline-color/prism-inline-color.css,\
+  **/prismjs/**/plugins/line-highlight/prism-line-highlight.css,\
+  **/prismjs/**/plugins/wpd/prism-wpd.css,\
   **/bootstrap/**/css/bootstrap.css
 style:\
 body { padding-top: 60px; margin-bottom: 60px; }\n\
