--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
   <description></description>
   <groupId>ball</groupId>
   <artifactId>forvm</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.1.20210218</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210107-SNAPSHOT</version>
+    <version>20210218.0</version>
     <relativePath>../ball/parent/pom.xml</relativePath>
   </parent>
   <inceptionYear>2018</inceptionYear>
