--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210625.0</version>
+    <version>20210803-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <organization>
