--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 
   <resolver:resolve>
     <dependencies>
-      <dependency coords="ball:parent:20210923.0:xml:compile"/>
+      <dependency coords="ball:parent:2022.0.0-SNAPSHOT:xml:compile"/>
     </dependencies>
     <properties/>
   </resolver:resolve>
