--- a/pom.xml
+++ b/pom.xml
@@ -214,18 +214,22 @@
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>bootstrap</artifactId>
+      <version>5.1.3</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
+      <version>3.6.0</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>popper.js</artifactId>
+      <version>2.9.3</version>
     </dependency>
     <dependency>
       <groupId>org.webjars.npm</groupId>
       <artifactId>prismjs</artifactId>
+      <version>1.16.0</version>
     </dependency>
   </dependencies>
 </project>
