--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ application.brand: @pom.artifactId@
 
 spring.jpa.hibernate.ddl-auto: validate
 spring.jpa.hibernate.naming.implicit-strategy: default
-spring.jpa.hibernate.naming.physical-strategy:\
-  org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.open-in-view: true
 spring.jpa.format-sql: true
 spring.jpa.show-sql: false
