--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>2022.1.1</version>
+    <version>2022.1.2-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <organization>
